# bioscrape

./: .gitignore  .travis.yml  .travis.yml.depricated  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  birth_death_data_multiple_conditions.csv  contributing.md  convert_simbio_to_xml.m  delay_model.xml  examples.ipynb  inference.pyx  mcmc_results.txt  paper.bib  paper.md  pyproject.toml  random.pxd  random.pyx  requirements.txt  setup.py  setup_bioscrape.py  setup_lineages.py  simulator.pxd  simulator.pyx  temp.pck  types.pxd  types.pyx  unzip_dist.py
bioscrape/: StochasticInference.py  __init__.py  analysis.py  emcee_interface.py  inference.cpp  inference.pxd  inference.pyx  inference_setup.py  pid_interface.py  pid_interfaces.py  random.cpp  random.pxd  random.pyx  sbmlutil.py  simulator.cpp  simulator.pxd  simulator.pyx  types.cpp  types.pxd  types.pyx
cython_debug/: cython_debug_info_bioscrape.lineage  interpreter
examples/: Advanced Examples - Direct Simulator Instantiation.ipynb  Advanced Examples and Developer Overview.ipynb  Basic Examples - START HERE.ipynb  Basic Examples --- START HERE.ipynb  Benchmarking bioscrape performance.ipynb  Create a bioscrape model - Tutorial.ipynb  Fast Statistics for SSA Trajectories.ipynb  Parameter Identification Advanced Example.ipynb  Parameter Identification Simple Example START HERE.ipynb  Parameter Identification Simple Test.ipynb  Parameter Identification Tools and Advanced Examples.ipynb  Saving and loading SBML and Bioscrape XML.ipynb  Sensitivity Analysis using Bioscrape.ipynb  benchmarking.py  examples.ipynb  mcmc_results.csv  sbml_loading.py  test_data.csv
inference examples/: Bioscrape Inference - Getting Started.ipynb  Birth death model.ipynb  Birth-Death Model.ipynb  Gaussian prior example.ipynb  Inference with Delay Models.ipynb  Linear Model .ipynb  Linear model parameter identification using bioscrape.ipynb  Multiple initial conditions.ipynb  Multiple trajectories initial conditions.ipynb  Multiple trajectories.ipynb  OD data using least squares (LMFit example).ipynb  Parameter Identification Simple Demo.ipynb  Parameter Identification Simple Test.ipynb  Parameter Identification Tools and Advanced Examples.ipynb  Parameter Identification _Advanced_ Demo.ipynb  Priors in Bioscrape Inference.ipynb  Simple Demo - Multiple initial conditions.ipynb  Stochastic Inference.ipynb  birth_death_data.csv  birth_death_data_multiple_conditions.csv  emcee_tutorial.ipynb  lmfit_results.csv  mcmc_results.csv  multiple_measurements.csv  test bioscrape.ipynb  toy_model.xml
lineage/: lineage.pxd  lineage.pyx  pq_test.pxd  pq_test.pyx
lineage examples/: CRISPRessilator.ipynb  Event and Rule Testing.ipynb  Interacting Lineages (Beta).ipynb  Lineage Examples.ipynb  Lineage Testing.ipynb  OLD BROKEN Lineage Examples.ipynb  ToggleCRN.xml
lineage tests/: Event and Rule Testing.ipynb  GlobalCRNTwoCellTypeLineageTest.py  Interacting Lineage Tests.ipynb  Interacting Lineages via SBML.ipynb  SingleCellTypeTest.py  TwoCellTypeLineageTest.py  turbidostat_mode_timing.py
models/: gene_expression_with_delay.xml  gene_expression_with_rule.xml
stochastic_inference/: README.md  StochasticInference.py  create_test_sbml.py  inference_notebook.ipynb  mcmc_results.csv  sbml_fit.xml  test_and_debug.ipynb  test_data.csv  test_data_noisy.csv  tutorial_inference.py
tests/: How to write bioscrape tests.ipynb  Likelihood and Data Objects.ipynb  temp.pck  (+27 more)
(+126 files in other folders)
